--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dft-mvc-core",
   "description": "Implementation of MVC Design Pattern (Facade, Model, View, Controller, common libraries).",
-  "version": "0.5.5",
+  "version": "0.6.0",
   "private": false,
   "main": "index.js",
   "directories": {
@@ -20,30 +20,30 @@
     "url": "https://github.com/ekalosha/nodejs-mvc-core/issues"
   },
   "dependencies": {
-    "async": ">=2.0.1",
-    "body-parser": ">=1.17.1",
-    "connect-mongo": ">=1.3.2",
-    "connect-redis": ">=3.1.0",
+    "async": "^2.6.0",
+    "body-parser": ">=1.18.2",
+    "connect-mongo": ">=2.0.0",
+    "connect-redis": ">=3.3.2",
     "cookie-parser": "^1.4.3",
-    "dotenv": ">=1.2.0",
-    "express": ">=4.14.0",
-    "express-session": ">=1.14.0",
-    "lodash": ">=4.14.0",
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "lodash": "^4.17.4",
     "mandrill-api": ">=1.0.45",
     "moment": ">=2.10.6",
-    "mongoose": ">=4.9.1",
+    "mongoose": "^4.13.7",
     "passport": "^0.3.2",
-    "redis": "^2.6.2",
+    "redis": "^2.8.0",
     "sendgrid": "^3.0.5",
     "swig": ">=1.4.2",
     "swig-lodash": "^1.2.1"
   },
   "devDependencies": {
-    "mocha": ">=2.5.3",
-    "request": "^2.74.0"
+    "mocha": "^4.0.1",
+    "request": "^2.83.0"
   },
   "engines": {
-    "node": ">=4.4.5",
-    "npm": ">=3.10.5"
+    "node": ">=8.4.0",
+    "npm": ">=5.3.0"
   }
 }
