--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "directories": {
     "test": "test"
   },
+  "scripts": {
+    "test": "mocha tests/index.js",
+    "debug": "devtool index.js"
+  },
   "homepage": "https://github.com/ekalosha/nodejs-mvc-core",
   "url": "https://github.com/ekalosha/nodejs-mvc-core",
   "author": "Eugene A. Kalosha <ekalosha@dfusiontech.com>",
@@ -39,7 +43,8 @@
     "swig-lodash": "^1.2.1"
   },
   "devDependencies": {
-    "mocha": "^4.0.1",
+    "chai": "^4.1.2",
+    "mocha": "^4.1.0",
     "request": "^2.83.0"
   },
   "engines": {
