--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-session": "^1.15.6",
     "lodash": "^4.17.4",
     "mandrill-api": ">=1.0.45",
+    "mocha": "^5.0.0",
     "moment": ">=2.10.6",
     "mongoose": "^4.13.7",
     "passport": "^0.3.2",
