--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
         "console": true
     },
     "rules": {
-        "strict": ["warn"],
+        "strict": ["warn", "global"],
         "no-undef": ["warn"],
         "curly": ["warn", "all"],
         "valid-jsdoc": ["warn", {
